--- a/SanFrancisco_Salaries.ipynb
+++ b/SanFrancisco_Salaries.ipynb
@@ -776,7 +776,7 @@
     }
    ],
    "source": [
-    "sal[['title_len','TotalPayBenefits']].corr() # Sem correlação"
+    "sal[['title_len','TotalPayBenefits']].corr()"
    ]
   }
  ],
